--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <div class = "slider-title"><h2>Starting at just $35</h2></div>
                     <div class="carwash"><p class = "first"><strong>Unlimited</strong></p>
                       <p class = "second"><strong>Membership Plan!</strong></p></div>
-                    <div class = "bt"><a href = "#" class = "btn btn-lg btn-primary">SEE ALL PLANS</a></div>
+                    <div class = "bt"><a href = "#" class = "btn btn-sm btn-primary">SEE ALL PLANS</a></div>
                 </div>
               </div>
               <div class="swiper-button-next" ></div>
